MP2/error
rm -f userapp *~ *.ko *.o *.mod.c Module.symvers modules.order
make -C /lib/modules/4.4.0-31-generic/build M=/home/tobias/MP/CS423/MP2 modules
make[1]: Entering directory '/usr/src/linux-headers-4.4.0-31-generic'
  CC [M]  /home/tobias/MP/CS423/MP2/mp2.o
In file included from include/linux/workqueue.h:8:0,
                 from include/linux/srcu.h:34,
                 from include/linux/notifier.h:15,
                 from include/linux/memory_hotplug.h:6,
                 from include/linux/mmzone.h:735,
                 from include/linux/gfp.h:5,
                 from include/linux/kmod.h:22,
                 from include/linux/module.h:13,
                 from /home/tobias/MP/CS423/MP2/mp2.c:3:
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘registration’:
include/linux/timer.h:136:18: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
   (_timer)->data = (_data);    \
                  ^
include/linux/timer.h:147:2: note: in expansion of macro ‘__setup_timer’
  __setup_timer((timer), (fn), (data), 0)
  ^
/home/tobias/MP/CS423/MP2/mp2.c:93:9: note: in expansion of macro ‘setup_timer’
         setup_timer(&obj->task_timer,my_timer_callback,obj);
         ^
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘deregistration’:
/home/tobias/MP/CS423/MP2/mp2.c:116:47: error: ‘struct mp2_task_struct’ has no member named ‘period’
         utilization-=(tmp->slice)*1000000/(tmp->period);
                                               ^
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘mp2_write’:
/home/tobias/MP/CS423/MP2/mp2.c:141:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   char * command;
   ^
/home/tobias/MP/CS423/MP2/mp2.c:145:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   unsigned int pid;
   ^
/home/tobias/MP/CS423/MP2/mp2.c:158:24: warning: format ‘%lu’ expects argument of type ‘long unsigned int *’, but argument 3 has type ‘unsigned int *’ [-Wformat=]
         sscanf(command,"R,%lu,%lu,%lu",&pid,&period,&slice);
                        ^
/home/tobias/MP/CS423/MP2/mp2.c:160:26: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
         if(DEBUG) printk("Registration:the value of pid is %lu period is %lu computation time is %lu\n",pid, period,slice);
                          ^
/home/tobias/MP/CS423/MP2/mp2.c:167:25: warning: format ‘%lu’ expects argument of type ‘long unsigned int *’, but argument 3 has type ‘unsigned int *’ [-Wformat=]
          sscanf(command,"Y,%lu",&pid);
                         ^
/home/tobias/MP/CS423/MP2/mp2.c:169:27: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
          if(DEBUG) printk("YIELD: the value of pid is %lu\n",pid);
                           ^
/home/tobias/MP/CS423/MP2/mp2.c:176:25: warning: format ‘%lu’ expects argument of type ‘long unsigned int *’, but argument 3 has type ‘unsigned int *’ [-Wformat=]
          sscanf(command,"D,%lu",&pid);
                         ^
/home/tobias/MP/CS423/MP2/mp2.c:178:27: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
          if(DEBUG) printk("Deregistrarion: the value of pid is %lu\n",pid);
                           ^
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘mp2_read’:
/home/tobias/MP/CS423/MP2/mp2.c:195:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   struct mp2_task_struct* my_obj;
   ^
/home/tobias/MP/CS423/MP2/mp2.c:203:25: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 3 has type ‘unsigned int’ [-Wformat=]
         sprintf(my_buff,"%lu : %lu  :%lu\n",my_obj->pid,my_obj->relative_period,my_obj->slice);
                         ^
/home/tobias/MP/CS423/MP2/mp2.c:205:26: warning: format ‘%lu’ expects argument of type ‘long unsigned int’, but argument 2 has type ‘unsigned int’ [-Wformat=]
         if(DEBUG) printk("pid is %lu period is %lu computation time %lu\n",my_obj->pid,my_obj->relative_period,my_obj->slice);
                          ^
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘dispatch_function’:
/home/tobias/MP/CS423/MP2/mp2.c:283:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   struct mp2_task_struct* my_obj;
   ^
/home/tobias/MP/CS423/MP2/mp2.c:322:11: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
           struct sched_param sparam;
           ^
/home/tobias/MP/CS423/MP2/mp2.c: At top level:
/home/tobias/MP/CS423/MP2/mp2.c:355:9: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
  .write=mp2_write,
         ^
/home/tobias/MP/CS423/MP2/mp2.c:355:9: note: (near initialization for ‘mp2_file.write’)
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘mp2_init’:
/home/tobias/MP/CS423/MP2/mp2.c:366:4: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
    int ret;
    ^
In file included from /home/tobias/MP/CS423/MP2/mp2.c:17:0:
/home/tobias/MP/CS423/MP2/mp2.c:374:27: warning: passing argument 1 of ‘kthread_create_on_node’ from incompatible pointer type [-Wincompatible-pointer-types]
    dispatcher=kthread_run(dispatch_function, NULL,"dispatcher function");
                           ^
include/linux/kthread.h:14:25: note: in definition of macro ‘kthread_create’
  kthread_create_on_node(threadfn, data, NUMA_NO_NODE, namefmt, ##arg)
                         ^
/home/tobias/MP/CS423/MP2/mp2.c:374:15: note: in expansion of macro ‘kthread_run’
    dispatcher=kthread_run(dispatch_function, NULL,"dispatcher function");
               ^
include/linux/kthread.h:8:21: note: expected ‘int (*)(void *)’ but argument is of type ‘int (*)(void)’
 struct task_struct *kthread_create_on_node(int (*threadfn)(void *data),
                     ^
/home/tobias/MP/CS423/MP2/mp2.c:366:8: warning: unused variable ‘ret’ [-Wunused-variable]
    int ret;
        ^
/home/tobias/MP/CS423/MP2/mp2.c: In function ‘mp2_exit’:
/home/tobias/MP/CS423/MP2/mp2.c:389:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   int ret=kthread_stop(dispatcher);
   ^
/home/tobias/MP/CS423/MP2/mp2.c:393:4: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
    static struct list_head *pos,*q;
    ^
scripts/Makefile.build:264: recipe for target '/home/tobias/MP/CS423/MP2/mp2.o' failed
make[2]: *** [/home/tobias/MP/CS423/MP2/mp2.o] Error 1
Makefile:1403: recipe for target '_module_/home/tobias/MP/CS423/MP2' failed
make[1]: *** [_module_/home/tobias/MP/CS423/MP2] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-4.4.0-31-generic'
Makefile:15: recipe for target 'modules' failed
make: *** [modules] Error 2
